[gd_scene load_steps=3 format=3 uid="uid://pi5cn1kl0pq6"]

[ext_resource type="Script" uid="uid://c8p5oebon6v22" path="res://src/report/import/import.gd" id="1_301es"]
[ext_resource type="PackedScene" uid="uid://chalvtlpjhj0r" path="res://src/background.tscn" id="1_mvioj"]

[node name="Import" type="Window"]
title = "File Import"
initial_position = 2
size = Vector2i(420, 206)
wrap_controls = true
script = ExtResource("1_301es")

[node name="Background" parent="." instance=ExtResource("1_mvioj")]

[node name="OverlayMargin" type="MarginContainer" parent="."]
offset_right = 420.0
offset_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="OverlayMargin"]
unique_name_in_owner = true
layout_mode = 2

[node name="ImportInfoLabel" type="Label" parent="OverlayMargin/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Select CSV file to be imported."
autowrap_mode = 2

[node name="LoadingInfoLabel" type="Label" parent="OverlayMargin/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Loading..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OverlayMargin/VBoxContainer"]
layout_mode = 2

[node name="FilepathEdit" type="LineEdit" parent="OverlayMargin/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Path to file"
clear_button_enabled = true

[node name="FileDialogButton" type="Button" parent="OverlayMargin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "..."

[node name="OverlayMargin" type="MarginContainer" parent="OverlayMargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 0

[node name="ImportButton" type="Button" parent="OverlayMargin/VBoxContainer"]
layout_mode = 2
text = "Import"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="OverlayMargin/VBoxContainer/HBoxContainer/FileDialogButton" to="." method="_on_file_dialog_button_pressed"]
[connection signal="pressed" from="OverlayMargin/VBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
